Disable parallax on mobile, fix readability issues

--- a/src/style/overrides/_phone.scss
+++ b/src/style/overrides/_phone.scss
@@ -8,11 +8,7 @@
   }
 
   .parallax-wrap {
-    .parallax-item {
-      img {
-        width: 400%;
-      }
-    }
+    inset: 0 -10%;
   }
 
   .scene-content {
