--- a/src/style/overrides/_tablet.scss
+++ b/src/style/overrides/_tablet.scss
@@ -5,17 +5,24 @@
 
   .section-wrap {
     padding: 64px 0;
-    min-height: 80vh;
+    min-height: 85vh;
   }
 
   .parallax-wrap {
-    .parallax-item {
-      img {
-        width: 200%;
-      }
+    inset: 0;
+    height: 100vh;
 
-      &:nth-of-type(5) {
-        top: 50px;
+    .parallax-item {
+      animation: none !important;
+      top: 0px;
+      height: 110vh;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: relative;
+        inset: unset;
       }
     }
   }
